# H_mat

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  run_plan.sh  tasks.txt
.a5c/cache/compression/: 65be49465f56a86a.json
.claude/: settings.json
.claude/agents/: committer.md  implementer.md  pr-finalizer.md  pr-opener.md  reviewer.md
.claude/commands/: task.md
.github/workflows/: ci.yml
src/gfcompress/: __init__.py  build_tree.py  column_basis.py  error.py  fixed_pattern.py  geometry.py  interactions.py  mockgf.py  neighbors.py  operators.py  peeling.py  randomized.py  sampling.py  tree.py
tests/: test_build_tree.py  test_column_basis.py  test_error.py  test_fixed_pattern.py  test_geometry.py  test_interactions.py  test_mockgf.py  test_neighbors.py  test_operators.py  test_package.py  test_peeling.py  test_randomized.py  test_sampling.py  test_tree.py
